default.css
body {
	margin: 0;
	padding: 0;
	background: #333333;
	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
	font-size: 13px;
	color: #666666;
	height: 100%;
	z-index:10;
}

h1, h2, h3 {
	margin-top: 0;
}

h1 {
	font-size: 2em;
}

h2 {
	font-size: 1.42em;
}

h3 {
	font-size: 1.1em;
}

ul {
	list-style-image: url(images/img07.gif);

}

a {
	color: #333333;
}

a:hover {
	text-decoration: none;
	color: #000000;
}

a img {
	padding:1px;
	border: none;
}

img.left {
	float: left;
	margin: 0 20px 0 0;
}

img.right {
	float: right;
	margin: 0 0 0 20px;
	border: thin solid #000000;
}

/* =========== Table =========== */
table, th, td {
    border: 0px solid black;
    border-collapse: collapse;
	margin-top: 10px;
}
th {
	padding: 5px;
    text-align: left;
	font-size: 1em;
}
td {
    padding: 5px 5px 5px 5px;
	font-size: 0.8em;
}
td img {
	padding:1px;
	border: thin solid #000000;
	margin-left: 20px;
}
td h3 {
	font-size: 1em;
	margin-bottom: 2px;
	text-decoration: underline;
}
/* =========== Header =========== */

#logo {
	width: 100%; min-width: 700px;
	height: 60px;
	margin: 0 auto;
	background: #000000 url(images/img01.gif) repeat-x;
	border-bottom: thin solid white;
	z-index:1;
}

#logo h1, #logo p {
	margin: 0;
	color: #FFFFFF;
}

#logo h1 {
	float: left;
	padding: 25px 7px 0px 7px;
}

#logo h2 {
	float: right;
	padding: 25px 7px 0px 7px;
}

#logo p {
	float: right;
	padding-top: 39px;
	font-size: 1.2em;
}

#logo a {
	text-decoration: none;
	color: #FFFFFF;
}

/* =========== Menu ===========*/
#menu {
	width: 80%; min-width: 700px;
	height: 39px;
	margin: 0 auto;
	background: #111111 url(images/img02.gif) repeat-x;
	border-bottom: 2px solid  #333333;
}

#menu ul {
	margin: 0;
	padding: 0px 0 0 0px;
	list-style: none;
}

#menu li {
	display: inline;
	text-align: center;
}

#menu a {
	display: block;		float: left;
	height: 29px;		width: 12%;
	padding: 12px 0px 0px 0px;
	font-size: 1.11em;	font-weight: bold;	color: #333333; text-decoration: none;
	border-right: 1px solid #333333;
}

#menu a:hover {
	text-decoration: underline;	color: #000000;
}

#menu .current_page_item a {
	text-decoration: underline;
	background: url(images/img06.gif) repeat-x;
	border-right: 2px solid #333333;	border-left: 1px solid #333333;
}

/* =========== Page ===========*/

#page {
	width: 80%; min-width: 700px;
	position: relative;
	background: #FFFFFF;
	height: 85%;	min-height: 50px;
	margin-top: 0;
	margin-right: auto;
	margin-bottom: 0;
	margin-left: auto;
	overflow: auto;
}

#page-bg {
	padding: 0px 0px 0px 0px;
	height: 100%;
	width: 100%;
}

#page-content {
	padding: 11px 24px 0px 24px;
	overflow: auto;
	border-bottom: 0px solid #E7E7E7;
}

#page-bg p {
	padding: 0% 0% 0% 2%;
}


/* =========== Content =========== */

#content {
	float: right;
	width: 75%;
	padding: 2% 2% 2% 2%;
	overflow: auto;
	border-left: 1px solid #E7E7E7;
}

.content-title{
	float: center;
	width: 100%;
	margin: 0% 0% 2% 0%;
	padding: 1% 0% 1% 0%;
	overflow: auto;
	border: 5px solid #E7E7E7;
}

.post {
	margin-bottom: 20px;
	padding-bottom: 15px;
	border-bottom: 1px solid #E7E7E7;
}

.title {
	margin: 0;
}

.title a {
	text-decoration: none;
}

.title a:hover {
	border-bottom: 1px dotted #999999;
}

.byline {
	margin: 0 0 20px 0;
}

.entry {

	width: 700px;
}

.links {
	padding-top: 10px;
	text-align: right;
	font-weight: bold;
}

.embed{
width: 60%;
}

.titlepic {
border: 10px solid #333333;
width: 90%;
margin-left: auto;
margin-right: auto
}

.titlevid {
border: 10px solid #333333;
border-top: 0px;
width: 90%;
margin-left: auto;
margin-right: auto
}

.vid {
border: 10px solid #333333;
width: 80%;
margin-left: auto;
margin-right: auto
}



/* =========== Sidebar =============== */

#sidebar {
	float: left;
	width: 20%;
	height: 97%;
	background-color: #FEFEFE;
	border-right: 0px solid #E7E7E7;
}

#sidebar ul {
	margin: 0;
	padding: 5px 20px 5px 40px;
	/*list-style: none;*/
	list-style-image: url(images/img07.gif);
}

#sidebar li {
}

#sidebar li ul {
	margin-bottom: 10px;
	padding-bottom: 10px;
}

#sidebar li li {
	padding: 5px 20px 5px 35px;
	background: url(images/img07.gif) no-repeat 20px 50%;
	border-bottom: 1px solid #F3F3F3;
}

#sidebar h2 {
	margin: 0;
	padding: 40px 0 3px 20px;
	border-bottom: 0px solid #E7E7E7;
	letter-spacing: -1px;
	font-size: 1.2em;
	font-weight: bold;
}

#sidebar a {
	text-decoration: none;
	padding: 0px 10px 2px 10px;
}

#sidebar a:hover {
	text-decoration: underline;
}

#sidebar .current_page_title a {
	margin: 500px 0px 500px 0px;
	border: 2px solid #333333;
	background-color: #F5F5F5;
}

#sidebar .current_page_menu a {
	text-decoration: underline;
	border: 1px solid #D9D9D9;
	background-color: #F5F5F5;
}


/* =========== Footer =========== */

#footer {
	width: 80%; min-width: 700px;
	height: 20px;
	margin: 0 auto;
	padding: 0px 0;
	background: url(images/img01.gif) repeat-x;
}
#footer_left
{	width: 100%;
	height: 20px;
	background: url(images/FooterLeft.gif) bottom left no-repeat;
}
#footer_right
{	width:100%;  height:20px;
	position: static; margin: -20px 0 0 0;
	top: 0px; right: 0;
	background: url(images/FooterRight.gif) bottom right no-repeat;
}

#footer p {
	margin: 0;
	text-align: center;
	font-size: smaller;
	color: #666666;
}

#footer a {
	color: #666666;
}


#video a img{
	width: 120px;
	height: 90px;
	padding: 0;
	border: 1px solid #AAAAAA;
}

#video
{
	margin: 0px 0px 0px 10px;
	border: 0px solid #220000;
	overflow: auto;
}

#video .tile
{
    display: inline-block;
    float: left;
    position: relative;
    margin: 10px 5px 35px 5px;
	border: 0px solid #220000;
}

#video .caption
{
    float: left;
    display: inline-block;
	text-align: center;
    position: absolute;
    top: 100%;
	padding: 2px;
	border: 0px solid #AAAAAA;
	color: #AAAAAA;
	font-size: 0.95em;
}

/* =========== news =========== */
#news {
	float: left;
	width: 45%; min-width: 350px;
	min-height: 90px;
	padding: 1% 1% 1% 1%;
	overflow: auto;
	border: 1px solid #E7E7E7;
	margin-left:10px;
}

#news .image{
	position: absolute;
	display: inline;
	float: left;
	overflow: auto;
	border: 0px solid #E7E7E7;
	padding:0px;
}

#news .info{
	position: static;
	display: inline-block;
	float: left;
	margin: 0% 0% 0% 180px;
	padding: 1% 1% 1% 1%;
	overflow: auto;
	border: 0px solid #000000;
}

#news .info a {
	font-size: 1.25em;
	float: left;
}
#news .info p {
	font-size: 1.0%em;
	float: left;
	margin: 10px 0px 0px 0px;
}

